sPlash Compiler/tests/negative/N_example11.sp
(* I'm Blue da ba de da ba die, da ba de da ba die, da ba de da ba die )